# steganosaurus

./: .gitignore  CMakeLists.txt  README.md
steganosaurus/: Steganozaurus.pro  _include.hpp  info.hpp  main.cpp  steganosaurus.pro
steganosaurus/Nowy folder/: commyunicator.cpp
steganosaurus/Nowy folder/encoders/: simpleencoder.cpp
steganosaurus/communicator/: _include.hpp  communicator.cpp  communicator.hpp  commyunicator.h
steganosaurus/communicator/encoders/: iencoder.cpp  iencoder.h  simpleencoder.cpp  simpleencoder.h
steganosaurus/encoders/: _include.hpp  iencoder.cpp  iencoder.hpp  simpleencoder.cpp  simpleencoder.hpp
steganosaurus/interface/: _include.hpp  arguments.cpp  arguments.hpp  help.cpp  help.hpp  qtinterface.cpp  qtinterface.hpp
test/: _include.hpp  clear.sh  interface.sh  jpeg.sh  main.cpp
test/bash/: interface.sh  issue3.sh  issue4.sh  issue5.sh  jpeg.sh  not-jpeg.sh  run-all.sh
test/encodedecode/: _include.hpp  encodedecode.cpp
test/encodedecode/data/: data-210.txt  data-80.txt  data-862.txt
test/interface/: _include.hpp  arguments.cpp
